--- a/angular.json
+++ b/angular.json
@@ -24,19 +24,20 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap3/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/hammerjs/hammer.min.js"
-            ]
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
+                "node_modules/hammerjs/hammer.min.js"
+              ]
+            },
+            "configurations": {
+              "production": {
+                "fileReplacements": [
+                  {
+                    "replace": "src/environments/environment.ts",
+                    "with": "src/environments/environment.prod.ts"
+                  }
               ],
               "optimization": true,
               "outputHashing": "all",
